--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -167,5 +167,90 @@
         </div>
     </div>
 </div>
+
+<div th:fragment="items-containter(model)">
+    <section class="Grid-module-container-kIPZs">
+        <div class="Scaffold-module-scaffold-F6aIC">
+            <div class="Grid-module-wrapper---F1s">
+                <div style="display:inline">
+                    <div style="display:inline">
+                        <span>
+                            <div th:each="item : ${model}"
+                                 class="Item-module-item-yTZtG Item-module-carouselItem-Q3n9V Item-module-landscapeItem-Sf-nw">
+                                <div class="Item-module-box-4uBp3 Item-module-show-qrDtq">
+                                    <a class="Item-module-link-Lms-C" tabindex="-1"
+                                       th:if="${item.getClass().simpleName == 'SeriesDto'}"
+                                       th:with="formattedTitle=${item.title.toLowerCase().replace(' ', '-')+'/sezon-1'}"
+                                       th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                    </a>
+                                    <a class="Item-module-link-Lms-C" tabindex="-1"
+                                       th:if="${item.getClass().simpleName == 'MovieDto'}"
+                                       th:with="formattedTitle=${item.title.toLowerCase().replace(' ', '-')}"
+                                       th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                    </a>
+                                    <div class="Item-module-image-CGday"
+                                         th:style="'background-image: url(' + ${item.imageUrl} + ');'">
+                                    </div>
+                                    <div class="Item-module-curtain-EV2Ya">
+                                        <div class="SeriesMeta-module-container-oFAL3">
+                                            <div class="SeriesMeta-module-metadata-8qwss">
+                                                <span class="Divider-module-divider-U-3--">
+                                                    <a class="ImdbRating-module-link-yYfI- ImdbRating-module-hasDefaultTypography-luAjW"
+                                                       th:href="@{${item.imdbUrl}}" target="_blank" tabindex="-1"
+                                                       th:text="${item.imdbRating}">
+                                                        ImdbRating
+                                                    </a>
+                                                </span>
+                                                <span class="Divider-module-divider-U-3-- Divider-module-featurebox-lE8g3">
+                                                    <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96"
+                                                          th:if="${item.getClass().simpleName == 'SeriesDto'}">
+                                                        <span th:text="${item.seasonsCount} + ' ' + (item.seasonsCount == 1 ? 'Season' : 'Seasons')">
+                                                            Seasons count
+                                                        </span>
+                                                    </span>
+                                                    <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96"
+                                                          th:if="${item.getClass().simpleName == 'MovieDto'}">
+                                                        <span th:if="${item.timeline < 59}">
+                                                            <span th:text="${item.timeline} + ' min.'"></span>
+                                                        </span>
+                                                        <span th:if="${item.timeline >= 60}">
+                                                            <span th:text="${item.timeline div 60 + ' hr.' + (item.timeline % 60 > 0 ? ' ' + item.timeline % 60 + ' min.' : '')}"></span>
+                                                        </span>
+                                                    </span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="InteractionIcons-module-container-apGgr">
+                                            <a class="TooltipButton-module-container-PfKnw TooltipButton-module-isItem-R6NdL" tabindex="-1"
+                                               th:if="${item.getClass().simpleName == 'SeriesDto'}"
+                                               th:with="formattedTitle=${item.title.replace(' ', '-')+'/sezon-1'}"
+                                               th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                            </a>
+                                            <a class="TooltipButton-module-container-PfKnw TooltipButton-module-isItem-R6NdL" tabindex="-1"
+                                               th:if="${item.getClass().simpleName == 'MovieDto'}"
+                                               th:with="formattedTitle=${item.title.toLowerCase().replace(' ', '-')}"
+                                               th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
+                                            </a>
+                                            <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH" data-testhook="item-star"
+                                                 th:classappend="${item.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
+                                                 th:attr="data-imdb-id=${item.imdbId}"></div>
+                                            <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-up"
+                                                 th:classappend="${item.userRating != null ? (item.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
+                                                 onclick="rate('up', this)" th:attr="data-imdbid=${item.imdbId}" data-testhook="item-rating-up">
+                                            </div>
+                                            <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-down"
+                                                 th:classappend="${item.userRating != null ? (item.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
+                                                 onclick="rate('down', this)" th:attr="data-imdbid=${item.imdbId}" data-testhook="item-rating-down"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 </html>
 
