--- a/src/main/resources/templates/moviesByGenre.html
+++ b/src/main/resources/templates/moviesByGenre.html
@@ -30,20 +30,14 @@
                                 <div class="Scaffold-module-scaffold-F6aIC">
                                     <div id="genrePicker" class="SeasonsNavigation-module-wrapper-dfFTz">
                                         <div class="SeasonsNavigation-module-container-PonSS">
-                                            <button class="SeasonsNavigation-module-button-vAD9n"
-                                                    data-testhook="genre-button" tabindex="0"
-                                                    style="text-decoration: none;">
+                                            <button class="SeasonsNavigation-module-button-vAD9n" data-testhook="genre-button" tabindex="0" style="text-decoration: none;">
                                                 <span th:text="${genre}">Gatunek</span>
                                             </button>
                                             <div class="SeasonsNavigation-module-dropdownWrapper-kC57-">
-                                                <ul th:each="genre : ${genres}"
-                                                    class="SeasonsNavigation-module-dropdown-Q3ieP"
-                                                    style="max-height: 480.438px;">
-                                                    <li class="SeasonButton-module-season-fRUUl"
-                                                        data-testhook="season-navigation-link" tabindex="0">
+                                                <ul th:each="genre : ${genres}" class="SeasonsNavigation-module-dropdown-Q3ieP" style="max-height: 480.438px;">
+                                                    <li class="SeasonButton-module-season-fRUUl" data-testhook="season-navigation-link" tabindex="0">
                                                         <a th:href="@{'/movies/' + ${genre.genreType.toLowerCase()}}">
-                                                            <span class="SeasonButton-module-link-NG1PO"
-                                                                  th:text="${genre.genreType}">Gatunek filmu</span>
+                                                            <span class="SeasonButton-module-link-NG1PO" th:text="${genre.genreType}">Gatunek filmu</span>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -53,72 +47,8 @@
                                 </div>
                             </section>
                         </div>
-                        <div class="StickyDiv-module-mark-Me4XV StickyDiv-module-bot--lgll"
-                             style="transform: translateY(-64px);"></div>
-                        <section class="Grid-module-container-kIPZs">
-                            <div class="Scaffold-module-scaffold-F6aIC">
-                                <div class="Grid-module-wrapper---F1s">
-                                    <div style="display:inline">
-                                        <div style="display:inline">
-                                            <span>
-                                                <div th:each="movieModel : ${moviesByGenre}"
-                                                     class="Item-module-item-yTZtG Item-module-carouselItem-Q3n9V Item-module-landscapeItem-Sf-nw">
-                                                    <div class="Item-module-box-4uBp3 Item-module-show-qrDtq">
-                                                        <a class="Item-module-link-Lms-C" tabindex="-1"
-                                                           th:with="formattedTitle=${movieModel.title.toLowerCase().replace(' ', '-')}"
-                                                           th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
-                                                        </a>
-                                                        <div class="Item-module-image-CGday"
-                                                             th:style="'background-image: url(' + ${movieModel.imageUrl} + ');'">
-                                                        </div>
-                                                        <div class="Item-module-curtain-EV2Ya">
-                                                            <div class="SeriesMeta-module-container-oFAL3">
-                                                                <div class="SeriesMeta-module-metadata-8qwss">
-                                                                    <span class="Divider-module-divider-U-3--">
-                                                                        <a class="ImdbRating-module-link-yYfI- ImdbRating-module-hasDefaultTypography-luAjW"
-                                                                           th:href="@{${movieModel.imdbUrl}}"
-                                                                           target="_blank"
-                                                                           tabindex="-1"
-                                                                           th:text="${movieModel.imdbRating}">
-                                                                            ImdbRating
-                                                                        </a>
-                                                                    </span>
-                                                                    <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
-                                                                        <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96">
-                                                                            <span th:text="${movieModel.releaseYear}">
-                                                                                ReleaseYear
-                                                                            </span>
-                                                                        </span>
-                                                                    </span>
-                                                                </div>
-                                                            </div>
-                                                            <div class="InteractionIcons-module-container-apGgr">
-                                                                <a class="TooltipButton-module-container-PfKnw TooltipButton-module-isItem-R6NdL"
-                                                                   tabindex="-1"
-                                                                   th:with="formattedTitle=${movieModel.title.replace(' ', '-')}"
-                                                                   th:href="@{/movies/{formattedTitle}(formattedTitle=${formattedTitle})} ">
-
-                                                                </a>
-                                                                <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
-                                                                     data-testhook="item-star" th:classappend="${movieModel.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
-                                                                     th:attr="data-imdb-id=${movieModel.imdbId}"></div>
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-up"
-                                                                     th:classappend="${movieModel.userRating != null ? (movieModel.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
-                                                                     onclick="rate('up', this)" th:attr="data-imdbid=${movieModel.imdbId}" data-testhook="item-rating-up">
-                                                                </div>
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-down"
-                                                                     th:classappend="${movieModel.userRating != null ? (movieModel.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
-                                                                     onclick="rate('down', this)" th:attr="data-imdbid=${movieModel.imdbId}" data-testhook="item-rating-down"></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
+                        <div class="StickyDiv-module-mark-Me4XV StickyDiv-module-bot--lgll" style="transform: translateY(-64px);"></div>
+                        <div th:replace="~{fragments :: items-containter(model=${moviesByGenre})}"></div>
                     </div>
                 </div>
             </div>
