--- a/src/main/resources/templates/seriesByGenre.html
+++ b/src/main/resources/templates/seriesByGenre.html
@@ -53,72 +53,8 @@
                                 </div>
                             </section>
                         </div>
-                        <div class="StickyDiv-module-mark-Me4XV StickyDiv-module-bot--lgll"
-                             style="transform: translateY(-64px);"></div>
-                        <section class="Grid-module-container-kIPZs">
-                            <div class="Scaffold-module-scaffold-F6aIC">
-                                <div class="Grid-module-wrapper---F1s">
-                                    <div style="display:inline">
-                                        <div style="display:inline">
-                                            <span>
-                                                <div th:each="seriesModel : ${seriesByGenre}"
-                                                     class="Item-module-item-yTZtG Item-module-carouselItem-Q3n9V Item-module-landscapeItem-Sf-nw">
-                                                    <div class="Item-module-box-4uBp3 Item-module-show-qrDtq">
-                                                        <a class="Item-module-link-Lms-C" tabindex="-1"
-                                                           th:with="formattedTitle=${seriesModel.title.toLowerCase().replace(' ', '-')+'/sezon-1'}"
-                                                           th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
-                                                        </a>
-                                                        <div class="Item-module-image-CGday"
-                                                             th:style="'background-image: url(' + ${seriesModel.imageUrl} + ');'">
-                                                        </div>
-                                                        <div class="Item-module-curtain-EV2Ya">
-                                                            <div class="SeriesMeta-module-container-oFAL3">
-                                                                <div class="SeriesMeta-module-metadata-8qwss">
-                                                                    <span class="Divider-module-divider-U-3--">
-                                                                        <a class="ImdbRating-module-link-yYfI- ImdbRating-module-hasDefaultTypography-luAjW"
-                                                                           th:href="@{${seriesModel.imdbUrl}}"
-                                                                           target="_blank"
-                                                                           tabindex="-1"
-                                                                           th:text="${seriesModel.imdbRating}">
-                                                                            ImdbRating
-                                                                        </a>
-                                                                    </span>
-                                                                    <span class="Divider-module-divider-U-3-- Divider-module-hasDefaultTypography-Uy4EO">
-                                                                        <span class="Seasons-module-container-ZM15y Seasons-module-hasDefaultTypography-8No96">
-                                                                            <span th:text="${seriesModel.seasonsCount} + ' ' + (seriesModel.seasonsCount == 1 ? 'Sezon' : 'Sezony')">
-                                                                                Season Count
-                                                                            </span>
-                                                                        </span>
-                                                                    </span>
-                                                                </div>
-                                                            </div>
-                                                            <div class="InteractionIcons-module-container-apGgr">
-                                                                <a class="TooltipButton-module-container-PfKnw TooltipButton-module-isItem-R6NdL"
-                                                                   tabindex="-1"
-                                                                   th:with="formattedTitle=${seriesModel.title.replace(' ', '-')+'/sezon-1'}"
-                                                                   th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})} ">
-
-                                                                </a>
-                                                                <div class="StarButton-module-container-sGC0y StarButton-module-isItem-SdwJH"
-                                                                     data-testhook="item-star" th:classappend="${seriesModel.onUserList ? 'StarButton-module-isStarred-v2AtG' : ''}"
-                                                                     th:attr="data-imdb-id=${seriesModel.imdbId}"></div>
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-up"
-                                                                     th:classappend="${seriesModel.userRating != null ? (seriesModel.userRating ? ' RateButtons-module-rateUp-S4se- RateButtons-module-active-n-0Gb' : ' RateButtons-module-rateUp-S4se-') : ' RateButtons-module-rateUp-S4se-'}"
-                                                                     onclick="rate('up', this)" th:attr="data-imdbid=${seriesModel.imdbId}" data-testhook="item-rating-up">
-                                                                </div>
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 rate-down"
-                                                                     th:classappend="${seriesModel.userRating != null ? (seriesModel.userRating ? ' RateButtons-module-rateDown-DblB1' : ' RateButtons-module-rateDown-DblB1 RateButtons-module-active-n-0Gb') : ' RateButtons-module-rateDown-DblB1'}"
-                                                                     onclick="rate('down', this)" th:attr="data-imdbid=${seriesModel.imdbId}" data-testhook="item-rating-down"></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
+                        <div class="StickyDiv-module-mark-Me4XV StickyDiv-module-bot--lgll" style="transform: translateY(-64px);"></div>
+                        <div th:replace="~{fragments :: items-containter(model=${seriesByGenre})}"></div>
                     </div>
                 </div>
 
