--- a/src/main/resources/templates/admin/movies/add-movie-api.html
+++ b/src/main/resources/templates/admin/movies/add-movie-api.html
@@ -9,7 +9,7 @@
 
 <div class="Layout-module-internal-page--krBv">
   <div th:replace="~{header :: header}"></div>
-  <h1 class="page-header-admin">Administration panel - add movie</h1>
+  <h1 class="page-header-admin">Administration panel - add movie by API</h1>
   <div id="content" class="admin-panel">
     <div th:replace="~{admin/sidebar :: sidebar}"></div>
     <div class="main-content">
